# iris-config-composer

./: .gitignore  poc.txt  pyproject.toml  requirements.txt
icc/: __init__.py  recipe_scope.py  script.py  stage.py
icc/recipes/: __init__.py  base.py  database_config.py  resource.py
tests/: recipe_scope.py  test_recipe_scope.py  test_script.py
tests/recipes/: conftest.py  test_database_config_recipe.py  test_resource_recipe.py
